; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c___exi_wait.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c___exi_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXI_DEVICE_0 = common dso_local global i32 0, align 4
@__exi_unlock = common dso_local global i32 0, align 4
@_ioEXILock = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @__exi_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__exi_wait(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  br label %4

4:                                                ; preds = %17, %1
  %5 = load i64, i64* %2, align 8
  %6 = load i32, i32* @EXI_DEVICE_0, align 4
  %7 = load i32, i32* @__exi_unlock, align 4
  %8 = call i64 @EXI_Lock(i64 %5, i32 %6, i32 %7)
  store i64 %8, i64* %3, align 8
  %9 = icmp eq i64 %8, 1
  br i1 %9, label %10, label %11

10:                                               ; preds = %4
  br label %20

11:                                               ; preds = %4
  %12 = load i32*, i32** @_ioEXILock, align 8
  %13 = load i64, i64* %2, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @LWP_ThreadSleep(i32 %15)
  br label %17

17:                                               ; preds = %11
  %18 = load i64, i64* %3, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %4, label %20

20:                                               ; preds = %17, %10
  ret void
}

declare dso_local i64 @EXI_Lock(i64, i32, i32) #1

declare dso_local i32 @LWP_ThreadSleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
